webui/src/scss/_controls.scss
.form-check:not(.form-switch) {
	input[type='checkbox'] {
		-webkit-appearance: none;
		width: 22px;
		height: 22px;
		background: white;
		border-radius: 4px;
		border: 1px solid #999;
	}

	input[type='checkbox']:checked {
		background: 0 0 url('/img/check.png') no-repeat;
	}
	input[type='checkbox']:disabled {
		background: #eee;
	}
}

label.disabled {
	color: #ccc;
}

.form-check {
	label {
		line-height: 24px;
		margin-bottom: 0;
	}
}

/* Style for autocomplete of variable */
.variable-suggestion-option span {
	display: block;

	&.var-name {
		font-weight: bold;
	}

	&.var-label {
		overflow: hidden;
		font-weight: inherit;
		text-overflow: ellipsis;
		white-space: nowrap;
	}
}

.variable-select-root {
	display: flex;
	flex-grow: 1;

	.variables-text-input {
		flex-grow: 1;

		& > div {
			padding: 0 !important;
		}

		.form-control {
			border: none;
		}
	}
}

.alignmentinput {
	display: grid;
	width: 60px;
	height: 60px;

	background-image: url('/img/alignment.png');

	grid-template-columns: 1fr 1fr 1fr;
	grid-template-rows: 1fr 1fr 1fr;
	column-gap: 1px;
	row-gap: 1px;
	padding: 0px;

	line-height: 0;

	> div {
		border: 2px solid #eee;
		border-radius: 3px;
		padding: 1px;
		&.selected {
			border: 2px solid #d502146e;

			background-size: contain !important;
			background-color: rgba(255, 0, 0, 0.1);
		}
	}
}

.pnginputfield {
	input[type='file'] {
		display: none;
	}
}

.sketch-picker {
	label {
		margin-top: 0.3rem;
		margin-right: 0.5rem;
	}
}

.select-invalid {
	.select-control__single-value {
		color: red;
	}
}

.select-control__menu-portal {
	z-index: 100 !important;
}

.select-control__control {
	border-color: #bbb !important;
	font-weight: bold;
}

